--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,23 +11,24 @@
     <application
         android:name=".presenter.WeatherApplication"
         android:allowBackup="false"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/icons8_summer_64"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/icons8_summer_64"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".ui.view.activity.SettingsActivity"
-            android:label="@string/title_activity_settings"></activity>
-
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyC1ovVKUNqjiUcTVt0QMjNp8Cb0BIUQgMM" />
 
         <activity
+            android:name=".ui.view.activity.SettingsActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
             android:name=".ui.view.activity.AddPlaceActivity"
             android:screenOrientation="portrait" />
+
         <activity
             android:name=".ui.view.activity.SplashActivity"
             android:screenOrientation="portrait">
