--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,10 @@
     <application
         android:name=".presenter.WeatherApplication"
         android:allowBackup="false"
-        android:icon="@drawable/icons8_summer_64"
+        android:icon="@mipmap/icons8_summer_64"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:roundIcon="@drawable/icons8_summer_64"
+        android:roundIcon="@mipmap/icons8_summer_64"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <meta-data
