bug fix : FavoritePlace click event(show MapView), Notification

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,7 @@
             android:name=".presenter.service.WeatherService"
             android:exported="false" />
 
-        <receiver android:name=".presenter.receiver.RestartServiceReceiver">
+        <receiver android:name=".presenter.receiver.ServiceReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
