--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,6 +61,10 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/widget_info_weather" />
         </receiver>
+
+        <service
+            android:name=".presenter.service.WidgetService"
+            android:exported="false" />
     </application>
 
 </manifest>
