--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:icon="@mipmap/icon"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:roundIcon="@mipmap/icon"
+        android:roundIcon="@mipmap/icon_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <meta-data
@@ -62,8 +62,21 @@
                 android:resource="@xml/widget_info_weather" />
         </receiver>
 
+        <receiver android:name=".ui.view.widget.WidgetProviderVertical">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widget_info_weather_vertical" />
+        </receiver>
+
         <service
             android:name=".presenter.service.WidgetService"
+            android:exported="false" />
+
+        <service
+            android:name=".presenter.service.WidgetServiceVertical"
             android:exported="false" />
     </application>
 
