--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,9 @@
     <application
         android:name=".presenter.WeatherApplication"
         android:allowBackup="false"
-        android:icon="@mipmap/icon"
+        android:icon="@mipmap/icons8_summer_64"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:roundIcon="@mipmap/icon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <meta-data
@@ -61,10 +60,6 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/widget_info_weather" />
         </receiver>
-
-        <service
-            android:name=".presenter.service.WidgetService"
-            android:exported="false" />
     </application>
 
 </manifest>
