--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,5 +61,14 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/widget_info_weather" />
         </receiver>
+
+        <receiver android:name=".ui.view.widget.WidgetSimpleProvider">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widget_simple_info_weather" />
+        </receiver>
     </application>
 </manifest>
