--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/icon_round"
+        android:exported="false"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <meta-data
