--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,11 @@
     <application
         android:name=".presenter.WeatherApplication"
         android:allowBackup="false"
+        android:exported="false"
         android:icon="@mipmap/icon"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/icon_round"
-        android:exported="false"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <meta-data
@@ -47,6 +47,9 @@
         <service
             android:name=".presenter.service.WeatherService"
             android:exported="false" />
+        <service
+            android:name=".presenter.service.UpDownService"
+            android:exported="false" />
 
         <receiver android:name=".presenter.receiver.ServiceReceiver">
             <intent-filter>
@@ -54,7 +57,9 @@
             </intent-filter>
         </receiver>
 
-        <receiver android:name=".ui.view.widget.WidgetProvider" android:label="@string/widget_default_name">
+        <receiver
+            android:name=".ui.view.widget.WidgetProvider"
+            android:label="@string/widget_default_name">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
@@ -63,7 +68,9 @@
                 android:resource="@xml/widget_info_weather" />
         </receiver>
 
-        <receiver android:name=".ui.view.widget.SimpleWidgetProvider" android:label="@string/widget_simple_name">
+        <receiver
+            android:name=".ui.view.widget.SimpleWidgetProvider"
+            android:label="@string/widget_simple_name">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
